namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-arns-risk-actuarial-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-arns-risk-actuarial-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "arns-risk-actuarial-team"
    cloud-platform.justice.gov.uk/slack-alert-channel: "arns-risk-actuarial_alerts_nonprod"
    cloud-platform.justice.gov.uk/application: "HMPPS ARNS risk actuarial"
    cloud-platform.justice.gov.uk/owner: "Assess risks and needs: assess-risks-and-needs@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-arns-risk-actuarial-api"
    cloud-platform.justice.gov.uk/team-name: "hmpps-assessments-devs"
